Added Cell Logic and Request images

--- a/Marvel/Common/AppStrings/Base.strings
+++ b/Marvel/Common/AppStrings/Base.strings
@@ -5,4 +5,4 @@
   Created by Carlos Parada on 29/01/22.
   
 */
-"bad_connection" = "Por favor revisa tu conexion \n\n(%@)";
+"bad_connection" = "Ups !!\n\n%@";
